Dark Mode Fix

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -8,7 +8,15 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: brightness(0.9);
 }
+.heroImage-dark {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(0.5);
+}
+
 .hero-img {
   height: 1.5rem;
   width: 1.5rem;
